// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add new record should not render publication form if author is not loaded  1`] = `<span />`;

exports[`Add new record should render stepper and a publication form 1`] = `
<div>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "Add another missing record",
        "confirmButtonLabel": "Go to my research",
        "confirmationMessage": <div>
          <p>
            Your record has been saved.
            <br />
            <br />
            Your item will be published immediately and an UQ eSpace Research Outputs Officer will review the record.
          </p>
        </div>,
        "confirmationTitle": "Your record has been submitted",
        "fileFailConfirmationAlert": Object {
          "message": "Retry uploading files and/or submitting publication notes via \\"Fix record\\" screen or contact eSpace administrators.",
          "title": "File upload and/or notes post failed",
          "type": "warning",
        },
        "recordSuccessConfirmationMessage": <p>
          Your record has been saved.
          <br />
          <br />
          Your item will be published immediately and an UQ eSpace Research Outputs Officer will review the record.
        </p>,
      }
    }
    onAction={[Function]}
    onCancelAction={[Function]}
    onRef={[Function]}
  />
  <PublicationForm
    initialValues={
      Object {
        "currentAuthor": Array [
          Object {
            "authorId": 44,
            "nameAsPublished": "Fred",
          },
        ],
        "rek_title": "",
      }
    }
    onFormCancel={[Function]}
    onFormSubmitSuccess={[Function]}
  />
</div>
`;

exports[`Add new record should render the confirm dialog with an alert for failed file upload 1`] = `
<ConfirmDialogBox
  hideCancelButton={false}
  locale={
    Object {
      "cancelButtonLabel": "Add another missing record",
      "confirmButtonLabel": "Go to my research",
      "confirmationMessage": <div>
        <p>
          Your record has been saved.
          <br />
          <br />
          Your item will be published immediately and an UQ eSpace Research Outputs Officer will review the record.
        </p>
      </div>,
      "confirmationTitle": "Your record has been submitted",
      "fileFailConfirmationAlert": Object {
        "message": "Retry uploading files and/or submitting publication notes via \\"Fix record\\" screen or contact eSpace administrators.",
        "title": "File upload and/or notes post failed",
        "type": "warning",
      },
      "recordSuccessConfirmationMessage": <p>
        Your record has been saved.
        <br />
        <br />
        Your item will be published immediately and an UQ eSpace Research Outputs Officer will review the record.
      </p>,
    }
  }
  onAction={[Function]}
  onCancelAction={[Function]}
  onRef={[Function]}
>
  <Dialog
    actions={
      Array [
        <div
          className="columns dialog-actions ConfirmDialogBox-actions"
        >
          <div
            className="column is-hidden-mobile"
          />
          <div
            className="column is-narrow"
          >
            <RaisedButton
              className="ConfirmDialogBox-actions-cancel"
              disabled={false}
              fullWidth={true}
              label="Add another missing record"
              labelPosition="after"
              onClick={[Function]}
              primary={false}
              secondary={false}
            />
          </div>
          <div
            className="column is-narrow"
          >
            <RaisedButton
              className="ConfirmDialogBox-actions-confirm"
              disabled={false}
              fullWidth={true}
              keyboardFocused={true}
              label="Go to my research"
              labelPosition="after"
              onClick={[Function]}
              primary={false}
              secondary={true}
            />
          </div>
          <div
            className="is-clearfix"
          />
        </div>,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={true}
    open={false}
    repositionOnUpdate={true}
    title="Your record has been submitted"
  >
    <RenderToLayer
      open={true}
      render={[Function]}
      useLayerForClickAway={false}
    />
  </Dialog>
</ConfirmDialogBox>
`;

exports[`Add new record should render the confirm dialog without an alert for a succcessful file upload 1`] = `
<ConfirmDialogBox
  hideCancelButton={false}
  locale={
    Object {
      "cancelButtonLabel": "Add another missing record",
      "confirmButtonLabel": "Go to my research",
      "confirmationMessage": <div>
        <p>
          Your record has been saved.
          <br />
          <br />
          Your item will be published immediately and an UQ eSpace Research Outputs Officer will review the record.
        </p>
      </div>,
      "confirmationTitle": "Your record has been submitted",
      "fileFailConfirmationAlert": Object {
        "message": "Retry uploading files and/or submitting publication notes via \\"Fix record\\" screen or contact eSpace administrators.",
        "title": "File upload and/or notes post failed",
        "type": "warning",
      },
      "recordSuccessConfirmationMessage": <p>
        Your record has been saved.
        <br />
        <br />
        Your item will be published immediately and an UQ eSpace Research Outputs Officer will review the record.
      </p>,
    }
  }
  onAction={[Function]}
  onCancelAction={[Function]}
  onRef={[Function]}
>
  <Dialog
    actions={
      Array [
        <div
          className="columns dialog-actions ConfirmDialogBox-actions"
        >
          <div
            className="column is-hidden-mobile"
          />
          <div
            className="column is-narrow"
          >
            <RaisedButton
              className="ConfirmDialogBox-actions-cancel"
              disabled={false}
              fullWidth={true}
              label="Add another missing record"
              labelPosition="after"
              onClick={[Function]}
              primary={false}
              secondary={false}
            />
          </div>
          <div
            className="column is-narrow"
          >
            <RaisedButton
              className="ConfirmDialogBox-actions-confirm"
              disabled={false}
              fullWidth={true}
              keyboardFocused={true}
              label="Go to my research"
              labelPosition="after"
              onClick={[Function]}
              primary={false}
              secondary={true}
            />
          </div>
          <div
            className="is-clearfix"
          />
        </div>,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={true}
    open={false}
    repositionOnUpdate={true}
    title="Your record has been submitted"
  >
    <RenderToLayer
      open={true}
      render={[Function]}
      useLayerForClickAway={false}
    />
  </Dialog>
</ConfirmDialogBox>
`;
